# sudilische

./: .gitignore  Makefile  plan.md  plan_2.md  pyproject.toml
src/courts/: celery_app.py  producer.py  runner.py  tasks.py  url.py
src/courts/captcha/: handler.py  solver.py  solver_stub.py
src/courts/downloader/: async_downloader.py  pager.py  sync_downloader.py
src/courts/generator/: query_builder.py  url_generator.py
src/courts/old/: sud_delo_get_all_cases.py  sud_delo_get_all_links.py  sud_delo_mgs_adapter.py
src/courts/parser/: parser.py
tests/: conftest.py  test_producer.py  test_regression.py  test_tasks.py  test_url_generator.py
tests/fixtures/: links.jsonl
tests/vcr_cassettes/: test_court_runner.yaml  test_produce_tasks.yaml  test_search_cases.yaml
